--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="game-screen">
       <h3>GUESS THE NUMBER</h3>
+      <p class="subtitle">Pick a number from 1 to 20</p>
       <div class="game-header">
         <p>Score: <span class="score">00</span></p>
         <p>High Score: <span class="high-score">00</span></p>
